// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`context rebuild: generated/relative-outpath/context/rebuild/a.html/1 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///b.html";
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "assets/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`context rebuild: generated/relative-outpath/context/rebuild/a.html/2 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///b.html";
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "assets/duck.glb";
  var e_default = "ws:///e.html";
  console.log(b_default, d_default, duck_default);
  console.log(e_default);
})();
</script>"
`;

exports[`context rebuild: generated/relative-outpath/context/rebuild/a.html/3 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///b.html";
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "assets/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`context rebuild: generated/relative-outpath/context/rebuild/assets/duck.glb/1 1`] = `"duck.glb"`;

exports[`context rebuild: generated/relative-outpath/context/rebuild/assets/duck.glb/2 1`] = `"duck.glb"`;

exports[`context rebuild: generated/relative-outpath/context/rebuild/assets/duck.glb/3 1`] = `"duck.glb"`;

exports[`context rebuild: generated/relative-outpath/context/rebuild/b.html/1 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`context rebuild: generated/relative-outpath/context/rebuild/b.html/2 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`context rebuild: generated/relative-outpath/context/rebuild/b.html/3 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`context rebuild: generated/relative-outpath/context/rebuild/c/d.html/1 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`context rebuild: generated/relative-outpath/context/rebuild/c/d.html/2 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`context rebuild: generated/relative-outpath/context/rebuild/c/d.html/3 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`context rebuild: generated/relative-outpath/context/rebuild/e.html/2 1`] = `
"<body></body><script>"use strict";
(() => {
  var e_default = "wat from e";
})();
</script>"
`;

exports[`context rebuild: generated/relative-outpath/context/rebuild/e.html/3 1`] = `
"<body></body><script>"use strict";
(() => {
  var e_default = "wat from e";
})();
</script>"
`;

exports[`context rebuild: generated/relative-outpath/context/rebuild/world.json/1 1`] = `
"{
  "mmlDocuments": {
    "duck": {
      "url": "ws:///a.html"
    }
  }
}"
`;

exports[`context rebuild: generated/relative-outpath/context/rebuild/world.json/2 1`] = `
"{
  "mmlDocuments": {
    "duck": {
      "url": "ws:///a.html"
    }
  }
}"
`;

exports[`context rebuild: generated/relative-outpath/context/rebuild/world.json/3 1`] = `
"{
  "mmlDocuments": {
    "duck": {
      "url": "ws:///a.html"
    }
  }
}"
`;

exports[`context watch: generated/relative-outpath/context/watch/a.html/1 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///b.html";
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "assets/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`context watch: generated/relative-outpath/context/watch/a.html/2 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///b.html";
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "assets/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`context watch: generated/relative-outpath/context/watch/assets/duck.glb/1 1`] = `"duck.glb"`;

exports[`context watch: generated/relative-outpath/context/watch/assets/duck.glb/2 1`] = `"duck.glb"`;

exports[`context watch: generated/relative-outpath/context/watch/b.html/1 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`context watch: generated/relative-outpath/context/watch/b.html/2 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`context watch: generated/relative-outpath/context/watch/c/d.html/1 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`context watch: generated/relative-outpath/context/watch/c/d.html/2 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`context watch: generated/relative-outpath/context/watch/world.json/1 1`] = `
"{
  "mmlDocuments": {
    "duck": {
      "url": "ws:///a.html"
    }
  }
}"
`;

exports[`context watch: generated/relative-outpath/context/watch/world.json/2 1`] = `
"{
  "mmlDocuments": {
    "duck": {
      "url": "ws:///a.html"
    }
  }
}"
`;

exports[`documentContext creates MML HTML documents: generated/relative-outpath/document-context/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "mml:test/src/b.ts";
  var d_default = "mml:test/src/c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "asset:test/src/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`documentContext creates MML HTML documents: generated/relative-outpath/document-context/a.js 1`] = `
""use strict";
(() => {
  var b_default = "mml:test/src/b.ts";
  var d_default = "mml:test/src/c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "asset:test/src/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
"
`;

exports[`documentContext creates MML HTML documents: generated/relative-outpath/document-context/assets/duck.glb 1`] = `"duck.glb"`;

exports[`documentContext creates MML HTML documents: generated/relative-outpath/document-context/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "mml:test/src/c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`documentContext creates MML HTML documents: generated/relative-outpath/document-context/b.js 1`] = `
""use strict";
(() => {
  var d_default = "mml:test/src/c/d.html";
  var c = "wat-" + d_default;
})();
"
`;

exports[`documentContext creates MML HTML documents: generated/relative-outpath/document-context/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with absolute outdir path with default options: generated/absolute-outpath/default-options/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///b.html";
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "assets/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`mml plugin with absolute outdir path with default options: generated/absolute-outpath/default-options/assets/duck.glb 1`] = `"duck.glb"`;

exports[`mml plugin with absolute outdir path with default options: generated/absolute-outpath/default-options/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`mml plugin with absolute outdir path with default options: generated/absolute-outpath/default-options/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with absolute outdir path with import prefix: generated/absolute-outpath/import-prefix/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///b.html";
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "assets/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`mml plugin with absolute outdir path with import prefix: generated/absolute-outpath/import-prefix/assets/duck.glb 1`] = `"duck.glb"`;

exports[`mml plugin with absolute outdir path with import prefix: generated/absolute-outpath/import-prefix/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`mml plugin with absolute outdir path with import prefix: generated/absolute-outpath/import-prefix/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with absolute outdir path with new import and path from output processor: generated/absolute-outpath/new-import-and-path/flop/assets/duck.glb 1`] = `"duck.glb"`;

exports[`mml plugin with absolute outdir path with new import and path from output processor: generated/absolute-outpath/new-import-and-path/flump/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///blump/b.html";
  var d_default = "ws:///blump/c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "blip/assets/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`mml plugin with absolute outdir path with new import and path from output processor: generated/absolute-outpath/new-import-and-path/flump/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///blump/c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`mml plugin with absolute outdir path with new import and path from output processor: generated/absolute-outpath/new-import-and-path/flump/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with absolute outdir path with new import from output processor: generated/absolute-outpath/new-import/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///quux/b.html";
  var d_default = "ws:///quux/c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "qack/assets/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`mml plugin with absolute outdir path with new import from output processor: generated/absolute-outpath/new-import/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///quux/c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`mml plugin with absolute outdir path with new import from output processor: generated/absolute-outpath/new-import/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with absolute outdir path with new import from output processor: generated/absolute-outpath/new-import/qack/assets/duck.glb 1`] = `"duck.glb"`;

exports[`mml plugin with absolute outdir path with new path from output processor: generated/absolute-outpath/new-path/bar/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///bar/b.html";
  var d_default = "ws:///bar/c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "baz/assets/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`mml plugin with absolute outdir path with new path from output processor: generated/absolute-outpath/new-path/bar/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///bar/c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`mml plugin with absolute outdir path with new path from output processor: generated/absolute-outpath/new-path/bar/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with absolute outdir path with new path from output processor: generated/absolute-outpath/new-path/baz/assets/duck.glb 1`] = `"duck.glb"`;

exports[`mml plugin with absolute outdir path world: generated/absolute-outpath/world/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///b.html";
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "assets/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`mml plugin with absolute outdir path world: generated/absolute-outpath/world/assets/duck.glb 1`] = `"duck.glb"`;

exports[`mml plugin with absolute outdir path world: generated/absolute-outpath/world/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`mml plugin with absolute outdir path world: generated/absolute-outpath/world/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with absolute outdir path world: generated/absolute-outpath/world/world.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var a_default = "ws:///a.html";
  var world_default = {
    mmlDocuments: {
      duck: {
        url: a_default
      }
    }
  };
})();
</script>"
`;

exports[`mml plugin with relative outdir path with default options: generated/relative-outpath/default-options/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///b.html";
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "assets/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`mml plugin with relative outdir path with default options: generated/relative-outpath/default-options/assets/duck.glb 1`] = `"duck.glb"`;

exports[`mml plugin with relative outdir path with default options: generated/relative-outpath/default-options/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`mml plugin with relative outdir path with default options: generated/relative-outpath/default-options/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with relative outdir path with import prefix: generated/relative-outpath/import-prefix/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///b.html";
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "assets/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`mml plugin with relative outdir path with import prefix: generated/relative-outpath/import-prefix/assets/duck.glb 1`] = `"duck.glb"`;

exports[`mml plugin with relative outdir path with import prefix: generated/relative-outpath/import-prefix/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`mml plugin with relative outdir path with import prefix: generated/relative-outpath/import-prefix/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with relative outdir path with new import and path from output processor: generated/relative-outpath/new-import-and-path/flop/assets/duck.glb 1`] = `"duck.glb"`;

exports[`mml plugin with relative outdir path with new import and path from output processor: generated/relative-outpath/new-import-and-path/flump/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///blump/b.html";
  var d_default = "ws:///blump/c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "blip/assets/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`mml plugin with relative outdir path with new import and path from output processor: generated/relative-outpath/new-import-and-path/flump/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///blump/c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`mml plugin with relative outdir path with new import and path from output processor: generated/relative-outpath/new-import-and-path/flump/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with relative outdir path with new import from output processor: generated/relative-outpath/new-import/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///quux/b.html";
  var d_default = "ws:///quux/c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "qack/assets/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`mml plugin with relative outdir path with new import from output processor: generated/relative-outpath/new-import/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///quux/c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`mml plugin with relative outdir path with new import from output processor: generated/relative-outpath/new-import/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with relative outdir path with new import from output processor: generated/relative-outpath/new-import/qack/assets/duck.glb 1`] = `"duck.glb"`;

exports[`mml plugin with relative outdir path with new path from output processor: generated/relative-outpath/new-path/bar/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///bar/b.html";
  var d_default = "ws:///bar/c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "baz/assets/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`mml plugin with relative outdir path with new path from output processor: generated/relative-outpath/new-path/bar/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///bar/c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`mml plugin with relative outdir path with new path from output processor: generated/relative-outpath/new-path/bar/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with relative outdir path with new path from output processor: generated/relative-outpath/new-path/baz/assets/duck.glb 1`] = `"duck.glb"`;

exports[`mml plugin with relative outdir path world: generated/relative-outpath/world/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///b.html";
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "assets/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`mml plugin with relative outdir path world: generated/relative-outpath/world/assets/duck.glb 1`] = `"duck.glb"`;

exports[`mml plugin with relative outdir path world: generated/relative-outpath/world/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`mml plugin with relative outdir path world: generated/relative-outpath/world/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`mml plugin with relative outdir path world: generated/relative-outpath/world/world.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var a_default = "ws:///a.html";
  var world_default = {
    mmlDocuments: {
      duck: {
        url: a_default
      }
    }
  };
})();
</script>"
`;

exports[`resultProcessor re-writes import paths for documents: generated/relative-outpath/result-processor/world/a.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var b_default = "ws:///b.html";
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
  var duck_default = "http://assets/duck.glb";
  console.log(b_default, d_default, duck_default);
})();
</script>"
`;

exports[`resultProcessor re-writes import paths for documents: generated/relative-outpath/result-processor/world/assets/duck.glb 1`] = `"duck.glb"`;

exports[`resultProcessor re-writes import paths for documents: generated/relative-outpath/result-processor/world/b.html 1`] = `
"<body></body><script>"use strict";
(() => {
  var d_default = "ws:///c/d.html";
  var c = "wat-" + d_default;
})();
</script>"
`;

exports[`resultProcessor re-writes import paths for documents: generated/relative-outpath/result-processor/world/c/d.html 1`] = `
"<html>
  <body>
    <p>I'm html!</p>
  </body>
</html>
"
`;

exports[`worldContext creates world JSON: generated/relative-outpath/world-context/world.js 1`] = `
""use strict";
var __defProp = Object.defineProperty;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __export = (target, all) => {
  for (var name in all)
    __defProp(target, name, { get: all[name], enumerable: true });
};
var __copyProps = (to, from, except, desc) => {
  if (from && typeof from === "object" || typeof from === "function") {
    for (let key of __getOwnPropNames(from))
      if (!__hasOwnProp.call(to, key) && key !== except)
        __defProp(to, key, { get: () => from[key], enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable });
  }
  return to;
};
var __toCommonJS = (mod) => __copyProps(__defProp({}, "__esModule", { value: true }), mod);
var world_exports = {};
__export(world_exports, {
  default: () => world_default
});
module.exports = __toCommonJS(world_exports);
var a_default = "mml:test/src/a.ts";
var world_default = {
  mmlDocuments: {
    duck: {
      url: a_default
    }
  }
};
"
`;

exports[`worldContext creates world JSON: generated/relative-outpath/world-context/world.json 1`] = `
"{
  "mmlDocuments": {
    "duck": {
      "url": "mml:test/src/a.ts"
    }
  }
}"
`;
